--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,18 @@
 server:
-  port: 10000
+  port: 20000
 spring:
   application:
     name: ploufMembres
   data:
     mongodb:
-      database: dbmembres
-      host: 192.168.56.50
+      database: base
+      host: localhost
       port: 27017
       username: root
-      password: passroot
+      password: root
+      authentication-database: admin
+
+logging:
+    level:
+      org.springframework.web: INFO
+
