--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,12 @@
             <artifactId>spring-cloud-commons</artifactId>
             <version>2.2.3.RELEASE</version>
         </dependency>
-    </dependencies>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-netflix-eureka-client</artifactId>
+			<version>2.2.3.RELEASE</version>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
