--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 20000
 spring:
   application:
-    name: ploufCours
+    name: PLOUFCOURS
   data:
     mongodb:
       database: base2
